--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,9 +179,9 @@ jobs:
 
     
       - persist_to_workspace:
-          root: .circleci/ansible
+          root: ~/project
           paths:
-            - inventory.txt
+            - .circleci/ansible/inventory.txt
 
       - destroy-environment  
 
@@ -193,7 +193,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["8a:07:e0:da:c8:a0:e0:82:0c:63:86:a2:9f:6c:ab:01"]
       - attach_workspace:
-          at: /root/project/.circleci/ansible
+          at: ~/project
       - run:
           name: Install awscli tar gzip
           command: |
@@ -225,10 +225,11 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /root/project/.circleci/ansible
+          at: ~/project
       - run: 
           name: View content of inventory.txt
-          command: cat .circleci/ansible/inventory.txt
+          command: |
+            cat .circleci/ansible/inventory.txt
       - run:
           name: Install awscli tar gzip
           command: |
@@ -260,7 +261,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /root/project/.circleci/ansible
+          at: ~/project
       - run:
           name: Install dependencies
           command: |
@@ -301,7 +302,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["8a:07:e0:da:c8:a0:e0:82:0c:63:86:a2:9f:6c:ab:01"]
       - attach_workspace:
-          at: /root/project/.circleci/ansible
+          at: ~/project
       - run:
           name: Install dependencies
           command: |
@@ -334,7 +335,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /root/project/.circleci/ansible
+          at: ~/project
       - run:
           name: Install dependencies
           command: |
