--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,8 +107,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical           
+            npm audit fix --audit-level=critical          
                 
   scan-backend:
     docker:
@@ -120,7 +119,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force --audit-level=critical
+            npm audit fix --audit-level=critical
 
   
   deploy-infrastructure:
