--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image:  python:3.7-alpine3.11
+      - image:  cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys:
@@ -181,9 +181,17 @@ jobs:
           name: Install awscli tar gzip
           command: |
             cat .circleci/ansible/inventory.txt
-            apk add --update ansible
-            pip install awscli
-            aws --version
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+            sudo apt install -y tar gzip
+            
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt update
+            sudo apt install -y python3 python3-pip
+            python3 -m pip install --user ansible
           
                 
       - run:
@@ -193,7 +201,7 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           
-      #- destroy-environment       
+      - destroy-environment       
        
   run-migrations:
     docker:
