--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,10 @@ jobs:
           command: |
             yum install -y tar gzip
       - run:
+          name: install tar and gzip
+          command: |
+             echo "[web]" > .circleci/ansible/inventory.txt     
+      - run:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
@@ -374,7 +378,7 @@ jobs:
       - revert-migrations
       - destroy-environment
 
-  cleanup:
+    cleanup:
       docker:
         - image: amazon/aws-cli
       steps:
@@ -395,7 +399,6 @@ jobs:
             command: |
               if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
               then
-                echo "-------------Delete Confirmed---------------------"
                 aws s3 rm "s3://udapeoplefrontend${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
